fixed arrow buttons on mobile

--- a/styles/carousel.scss
+++ b/styles/carousel.scss
@@ -89,6 +89,7 @@
     color: $blue;
     border: none;
     font-size: 2rem;
+    padding: 0;
     &--left {
         left: -30px;
     }
